Date and Duration fields are fixed with proper format

--- a/meteorBeehive/meteorBeehive.html
+++ b/meteorBeehive/meteorBeehive.html
@@ -18,17 +18,17 @@
 
     <div  class="form-group">
       <label for="meteorBeeHive">Observation Date</label>
-      <input type="text"  class="form-control"  name="ObsDate" placeholder="YYYY-MM-DD">
+      <input type="date"  class="form-control"  name="ObsDate" placeholder="YYYY-MM-DD">
   </div>
 
   <div  class="form-group">
     <label for="meteorBeeHive">Duration</label>
-    <input type="text"  class="form-control"  name="Duration" placeholder="YYYY-MM-DD">
+    <input type="number"  class="form-control"  name="Duration">
 </div>
 
 <div  class="form-group">
   <label for="meteorBeeHive">Mite Count</label>
-  <input type="text"  class="form-control"  name="MitCount">
+  <input type="number"  class="form-control"  name="MitCount">
 </div>
 
 
