Started on excel export, downloaded packages

--- a/meteorBeehive/meteorBeehive.html
+++ b/meteorBeehive/meteorBeehive.html
@@ -38,6 +38,13 @@
 </div>
   </template>
 
+  
+<template name="export">
+
+</template>
+
+
+
 <template name="admin">
        {{#each messages}}
         <p> <strong>Hive Name</strong> {{ name }}: <strong>Observation Date</strong> {{ date }}:
